--- a/my-portfolio/src/components/Skills.css
+++ b/my-portfolio/src/components/Skills.css
@@ -2,7 +2,6 @@
     padding: 2rem;
     
   }
-  
   .skills h1 {
     font-size: 2rem;
   }
@@ -21,7 +20,7 @@
     color: #333;
     padding: 50px 20px; 
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 100px;
   }
   
   .skills h1 {
@@ -32,10 +31,10 @@
   
   .skills-container {
     display: flex;
-    justify-content: space-around; 
     align-items: center; 
     flex-wrap: wrap; 
-    gap: 20px; 
+    gap: 60px; 
+    margin-left: 80px;
   }
   
 
@@ -45,7 +44,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     padding: 30px;
     box-sizing: border-box;
-    width: 300px; 
+    width: 280px; 
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
   }
@@ -54,6 +53,7 @@
     transform: translateY(-10px); 
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
     background-color: #fcf2e4;
+    
   }
  
 
@@ -74,10 +74,24 @@
   
   
   .jsbox{
-     width: 60px;
-     background-color: orange;
+     width: 40px;
      margin-left: 85px;
      border-radius: 5px;
+  }
+
+  .jsbox img{
+    width: 55px; 
+    height: 50px;
+  }
+
+  .jsbox1{
+    width: 40px;
+    margin-left: 85px;
+    border-radius: 5px;
+ }
+  .jsbox1 img{
+    width: 30px; 
+    height: 50px;
   }
 
   .jsbox h1{
