--- a/my-portfolio/src/components/Navbar.css
+++ b/my-portfolio/src/components/Navbar.css
@@ -23,8 +23,9 @@
 
 strong {
   margin-right: 25%;
-  font-size: 20px;
+  font-size: 25px;
   margin-left: 60px;
+  margin-top: -5px;
   color: orange;
 }
 
