--- a/my-portfolio/src/components/TechStack.css
+++ b/my-portfolio/src/components/TechStack.css
@@ -5,7 +5,7 @@
     padding-bottom: 100px;
     padding-left: 6rem;
     padding-right: 6rem;
-    padding-top: 4rem;
+    padding-top: 65px;
   }
   
   .tech-stack h2 {
