--- a/my-portfolio/src/components/Navbar.css
+++ b/my-portfolio/src/components/Navbar.css
@@ -1,42 +1,110 @@
+/* Navbar Styles */
 .navbar {
-  background-color: #000000;
+  background-color: #000;
   color: white;
-  padding: 1rem;
-  text-align: center;
-  height: 35px;
+  padding: 1rem 2rem;
   position: sticky;
   top: 0;
+  max-width: 1600px;
   z-index: 1000;
-}
-
-.navbar ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 5px;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navbar ul li {
-  margin: 0 2rem;
-}
-
-strong {
-  margin-right: 25%;
+/* Navbar Logo */
+.navbar-logo a {
   font-size: 25px;
-  margin-left: 60px;
-  margin-top: -5px;
+  font-weight: bold;
+  text-decoration: none;
   color: orange;
 }
 
-.navbar ul li a {
+.navbar-logo a span {
+  color: white;
+}
+
+/* Navbar Links */
+.nav-links {
+  display: flex;
+  gap: 2rem;
+}
+
+.nav-links a {
   color: white;
   text-decoration: none;
   font-size: 18px;
   font-weight: 600;
+  transition: color 0.3s ease-in-out;
 }
 
-.navbar ul li a:hover,
-.navbar ul li a.active {
+.nav-links a:hover, 
+.nav-links a.active {
   color: orange;
+}
+
+/* Mobile Menu */
+.mobile-menu-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburger {
+  width: 30px;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger span {
+  background: white;
+  height: 4px;
+  width: 100%;
+  transition: 0.3s;
+}
+
+.hamburger.active span:nth-child(1) {
+  transform: rotate(45deg) translateY(8px);
+}
+
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-45deg) translateY(-8px);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+    padding: 1rem;
+    transform: translateY(-100%);
+    opacity: 0;
+    visibility: hidden;
+    margin-left: 65%;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, visibility 0.3s;
+  }
+  
+  .nav-links.active {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .mobile-menu-toggle {
+    display: block;
+  }
 }
